# fantasy-draft

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  demo.py  main.py  pyproject.toml  requirements.txt  test_demo.py  test_main.py  test_ws.py
.github/workflows/: python-app.yml
static/: index.html
templates/: index.html
