[project]
name = "fantasy-draft"
version = "0.1.0"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=90 --cov-branch"
testpaths = ["."]

[tool.coverage.run]
omit = [
    "test_*.py",
    "*/test_*.py",
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.*/*"
] 